@@ -1,54 +1,56 @@
 package br.com.beveragesuggester.boundary;
 
+import br.com.beveragesuggester.control.RandomizerService;
 import br.com.beveragesuggester.control.TemperatureService;
 import br.com.beveragesuggester.entity.Beverage;
 import br.com.beveragesuggester.entity.Category;
-import java.util.Arrays;
+import jakarta.inject.Inject;
+
 import java.util.List;
-import java.util.Random;
-import static java.util.stream.Collectors.toList;
-import javax.ejb.Stateless;
-import javax.inject.Inject;
+import java.util.Set;
 
 /**
- *
  * @author Felipe
  */
-@Stateless
 public class BeverageService {
-    
-    private static final List<Beverage> BEVERAGES = Arrays.asList(
-            new Beverage("Coffee", Arrays.asList(Category.HOT, Category.ANYTIME)),
-            new Beverage("Beer", Arrays.asList(Category.COLD)),
-            new Beverage("Hot Chocolate", Arrays.asList(Category.HOT)),
-            new Beverage("Smoothie", Arrays.asList(Category.COLD, Category.ANYTIME)),
-            new Beverage("Tea", Arrays.asList(Category.HOT)));
-    
+
+    private static final List<Beverage> BEVERAGES = List.of(
+            new Beverage("Coffee", Set.of(Category.HOT, Category.ANYTIME)),
+            new Beverage("Beer", Set.of(Category.COLD)),
+            new Beverage("Hot Chocolate", Set.of(Category.HOT)),
+            new Beverage("Smoothie", Set.of(Category.COLD, Category.ANYTIME)),
+            new Beverage("Tea", Set.of(Category.HOT)));
+
+    private final TemperatureService temperatureService;
+    private final RandomizerService randomizerService;
+
     @Inject
-    private TemperatureService temperatureService;
-    
+    public BeverageService(TemperatureService temperatureService, RandomizerService randomizerService) {
+        this.temperatureService = temperatureService;
+        this.randomizerService = randomizerService;
+    }
+
     public Beverage pickRandom() {
-        int randomIndex = new Random().nextInt(BEVERAGES.size());
-        
+        final var randomIndex = this.randomizerService.randomInt(BEVERAGES.size());
+
         return BEVERAGES.get(randomIndex);
     }
-    
+
     public Beverage pickRandomBasedOnTemperature() {
-        Double temperature = temperatureService.getTemperature("Sao Paulo, BR");
-        Category bestCategoryFromTemperature = getBestCategoryFromTemperature(temperature.intValue());
-        
-        List<Beverage> beveragesTempBased = BEVERAGES.stream()
-                .filter(beverage -> beverage.getCategories().contains(bestCategoryFromTemperature))
-                .collect(toList());
-        
-        int randomIndex = new Random().nextInt(beveragesTempBased.size());
+        final var temperature = temperatureService.getTemperature("Sao Paulo, BR");
+        final var bestCategoryFromTemperature = getBestCategoryFromTemperature(temperature.intValue());
+        final var beveragesTempBased = BEVERAGES.stream()
+                .filter(beverage -> beverage.categories().contains(bestCategoryFromTemperature))
+                .toList();
+
+        final var randomIndex = this.randomizerService.randomInt(beveragesTempBased.size());
         return beveragesTempBased.get(randomIndex);
     }
-    
+
     private Category getBestCategoryFromTemperature(int temperature) {
         if (temperature <= 20) {
             return Category.HOT;
-        } else if (temperature > 20 && temperature < 27) {
+        } else if (temperature < 27) {
             return Category.ANYTIME;
         } else {
             return Category.COLD;
